# spacetime-maps

./: LICENSE  README.md  crop_video.py
backend/: circle.ipynb  location-snapping.ipynb  playground.ipynb  pyproject.toml
backend/backend/: export.py  gmaps.py  grid.py  location.py
backend/scripts/: fill_in_dense_travel_times.py
cavalry/: README.md  circle-warp.cv  sping-arrows.cv  travel-speed.cv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html
frontend/src/: App.tsx  DebugOverlay.tsx  ExplanationModal.tsx  ExplanationText.tsx  HamburgerMenuIcon.tsx  Menu.tsx  MeshTriangle.tsx  SpacetimeMap.tsx  StretchyMap.tsx  TimenessAnimation.tsx  ViewSettingsPanel.tsx  cityData.ts  constants.ts  gridData.ts  index.css  index.tsx  mesh.ts  settings.ts  springs.ts  useIsMobile.ts  useSearchParamsState.ts  viewSettings.ts  windowDimensions.ts
frontend/src/assets/: 11x11grid-v6.json  15x15grid-v7.json  20x20grid-v8.json  5x5grid-v4.json  5x5grid-v5.json  5x5matrix-v3-request.json  5x5matrix-v3.json  5x5matrix.json  9x9matrix-request.json  9x9matrix-v2-request.json  9x9matrix-v2.json  9x9matrix.json  prague-v1.json  prague-v2.json  prague-v3.json
frontend/src/assets/cairo/: grid_data.json
frontend/src/assets/hongkong/: grid_data.json
frontend/src/assets/lapaz/: grid_data.json
frontend/src/components/: App.tsx  DebugOverlay.tsx  ExplanationModal.tsx  ExplanationText.tsx  HamburgerMenuIcon.tsx  Menu.tsx  Router.tsx  SpacetimeMap.tsx  TimenessAnimation.tsx  ViewSettingsPanel.tsx
(+13 files in other folders)
