[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Václav Volhejn <vaclav.volhejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
